VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc23Up.err
[8MB/455.2MB][  1%][>                                                 ][2.667MB/s]  [16MB/455.2MB][  3%][=>                                                ][3.2MB/s]  [24MB/455.2MB][  5%][==>                                               ][4MB/s]  [32MB/455.2MB][  7%][===>                                              ][3.556MB/s]  [40MB/455.2MB][  8%][====>                                             ][3.077MB/s]  [48MB/455.2MB][ 10%][=====>                                            ][2.824MB/s]  [56MB/455.2MB][ 12%][======>                                           ][2.545MB/s]  [64MB/455.2MB][ 14%][=======>                                          ][2.56MB/s]  [72MB/455.2MB][ 15%][=======>                                          ][2.483MB/s]  [80MB/455.2MB][ 17%][========>                                         ][2.5MB/s]  [88MB/455.2MB][ 19%][=========>                                        ][2.444MB/s]  [96MB/455.2MB][ 21%][==========>                                       ][2.4MB/s]  [104MB/455.2MB][ 22%][===========>                                      ][2.364MB/s]  [112MB/455.2MB][ 24%][============>                                     ][2.383MB/s]  [120MB/455.2MB][ 26%][=============>                                    ][2.4MB/s]  [128MB/455.2MB][ 28%][==============>                                   ][2.415MB/s]  [136MB/455.2MB][ 29%][==============>                                   ][2.429MB/s]  [144MB/455.2MB][ 31%][===============>                                  ][2.483MB/s]  [152MB/455.2MB][ 33%][================>                                 ][2.576MB/s]  [160MB/455.2MB][ 35%][=================>                                ][2.667MB/s]  [168MB/455.2MB][ 36%][==================>                               ][2.754MB/s]  [176MB/455.2MB][ 38%][===================>                              ][2.839MB/s]  [184MB/455.2MB][ 40%][====================>                             ][2.921MB/s]  [200MB/455.2MB][ 43%][=====================>                            ][3.125MB/s]  [224MB/455.2MB][ 49%][========================>                         ][3.446MB/s]  [248MB/455.2MB][ 54%][===========================>                      ][3.758MB/s]  [264MB/455.2MB][ 58%][=============================>                    ][3.94MB/s]  [280MB/455.2MB][ 61%][==============================>                   ][4.118MB/s]  [288MB/455.2MB][ 63%][===============================>                  ][4.174MB/s]  [296MB/455.2MB][ 65%][================================>                 ][4.229MB/s]  [304MB/455.2MB][ 66%][=================================>                ][4.282MB/s]  [312MB/455.2MB][ 68%][==================================>               ][4.274MB/s]  [320MB/455.2MB][ 70%][===================================>              ][4.211MB/s]  [328MB/455.2MB][ 72%][====================================>             ][4.1MB/s]  [336MB/455.2MB][ 73%][====================================>             ][3.907MB/s]  [344MB/455.2MB][ 75%][=====================================>            ][3.699MB/s]  [352MB/455.2MB][ 77%][======================================>           ][3.417MB/s]  [360MB/455.2MB][ 79%][=======================================>          ][3.243MB/s]  [368MB/455.2MB][ 80%][========================================>         ][3.067MB/s]  [376MB/455.2MB][ 82%][=========================================>        ][2.938MB/s]  [384MB/455.2MB][ 84%][==========================================>       ][2.844MB/s]  [392MB/455.2MB][ 86%][===========================================>      ][2.78MB/s]  [400MB/455.2MB][ 87%][===========================================>      ][2.649MB/s]  [408MB/455.2MB][ 89%][============================================>     ][2.566MB/s]  [416MB/455.2MB][ 91%][=============================================>    ][2.476MB/s]  [424MB/455.2MB][ 93%][==============================================>   ][2.369MB/s]  [432MB/455.2MB][ 94%][===============================================>  ][2.335MB/s]  [440MB/455.2MB][ 96%][================================================> ][2.353MB/s]  [448MB/455.2MB][ 98%][=================================================>][2.383MB/s]  [455.2MB/455.2MB][100%][==================================================][2.408MB/s]  [455.2MB/455.2MB][100%][==================================================][2.408MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_24441/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_24441/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
